fix spacing bugs in brand area

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@
 /* Start Brand Area */
 
 .site-main .brand-area {
-  padding: 1rem 20rem;
+  padding: 1rem 5rem;
   margin-bottom: 4rem;
 }
 
@@ -168,7 +168,7 @@
 }
 
 .site-main .brand-area .experience-area .call-area {
-  padding-left: 10rem;
+  padding-left:4rem;
 }
 
 /* End Brand Area */
